[package]
name = "bin_codec_derive"
version = "0.1.0"
authors = ["ywzjackal@163.com <ywzjackal@163.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "../README.md"
keywords = ["bitfield", "binary", "encode", "decode"]
categories = ["web-programming"]
description = "binary encoder decoder with bit field"
repository = "https://github.com/ywzjackal/bin_codec.rs"
homepage = "https://github.com/ywzjackal/bin_codec.rs"
documentation = "https://github.com/ywzjackal/bin_codec.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = {version="0.15", features=["extra-traits"]}
quote = "0.6"
bin_codec = { path="../bin_codec" }