[package]
name = "bin_codec_test"
version = "0.1.0"
authors = ["ywzjackal@163.com <ywzjackal@163.com>"]
edition = "2018"

[dependencies]
bin_codec = {path = "../bin_codec"}
bin_codec_derive = {path = "../bin_codec_derive"}

serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ts_pack"
harness = false
[[bench]]
name = "copy_slice_be" 
harness = false
[[bench]]
name = "compare"
harness = false